- rehuff - http://wiki.xiph.org/Rehuff
- Tidy 5.1.14 - http://tidy.sourceforge.net
- TruePNG 0.6.2.2 - http://x128.ho.ua/pngutils.html
- UPX 3.91 - http://upx.sourceforge.net
- ZLib 1.2.8 - http://www.zlib.net
- zRecompress 2.12 - http://nikkhokkho.sourceforge.net/static.php?page=zRecompress


X.XX - YYYY/MM/DD
- Added support for Adobe Illustrator (AI) file types (maadjordan).
- Updated jpegoptim to 1.4.4 (custom built).
- Updated ImageMagick 7.0.2.9 with HDRI support.


9.00 - 2016/08/15
- Ribbon interface is by default disabled, and replaced by traditional menus. There is a new Appearance tab under Options dialog where you can reenable it (Newtomic).
- Added context menu Open containing folder (Special).
- Now you can override virtually any INI setting thought the command-line. For instance FileOptimizer32.exe /GIFAllowLossy=true.
- Added INI option ShutdownWhenDone=false to specify the OS to shutdown as soon as optimization of all queued files is done (guindos98).
- Implemented simple command-line help when specifying /? switch.
- Enhanced update checker.
- Implemented a Statistics section that can be checked inside the Information window.
- Improved single instance detection, because it did not work properly on Vista and later (Special).
- Embarcadero themes have conflicts with Windows 10 Anniversay update, so we get back to default Windows one in 10 or later (RejZoR, TPS).
- Made abort optimization message more clearer (Louis Horvath).
- Fixed main window position not properly restored on launch (hairycactus).
- Simplified ECT multithreading, because it already knows the number of threads to use.
- Retested in Windows XP RTM, and Windows 10 Anniversary.
- Updated help file.
- Updated Leanify to 0.4.3.149 daily binaries.
- Updated to ECT 0.6.2.0 -ef70e0- x86 and x64 optimized builds (thanks Malloc Voidstar).
- Changed from pngwolf to pngwolf-zopfli, which gives higher rations, and a native x64 build (TPS).
- Updated ImageMagick 7.0.2.7 with HDRI support.